# SkullDougery

./: .cproject  .cproject.wrk  .gitignore  .project  CMakeLists.txt  Commands.cpp  Commands.h  Configuration.cpp  Configuration.h  Makefile  Motion_planning.odt  Network.cpp  Network.h  README.md  READNE.md  clean_cmake.sh  lucas_sparse.cpp  partitions.csv  sdkconfig  sdkconfig.old  sdkconfig.xxx  tracker.cpp
main/: CMakeLists.txt  CmdDecoder.cpp  CmdDecoder.h  Interpolate.cpp  Interpolate.h  MotionSequencer.cpp  MotionSequencer.h  PwmDriver.cpp  PwmDriver.h  SndPlayer.cpp  SndPlayer.h  config.cpp  config.h  main.cpp
main/Network/: UDPServer.cpp  UDPServer.h  WiFiHub.cpp  WiFiHub.h
main/Parameters/: RmNvs.cpp  RmNvs.h
main/Sequencer/: DeviceDef.cpp  DeviceDef.h  Message.cpp  Message.h  SwitchBoard.cpp  SwitchBoard.h
main/Stepper/: #StepperMotorController.cpp#  Arduino.cpp  Arduino.h  StepperDriver.cpp  StepperDriver.h  StepperMotorController.cpp  StepperMotorController.h
main/audio/: DACOutput.cpp  DACOutput.h  I2SOutput.cpp  I2SOutput.h  I2SOutput2.cpp  I2SOutput2.h  NewDACOutput.cpp  NewDACOutput.h  Output.cpp  Output.h  SndPlayer.cpp  SndPlayer.h
